remove the carrier parts. to be continued and checked
